--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,37 @@ subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
+    beforeEvaluate { project ->
+        if (project.name == "ar_flutter_plugin") {
+            project.buildscript.dependencies.classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        }
+    }
+}
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            project.android {
+                if (namespace == null) {
+                    namespace project.group
+                }
+            }
+        }
+
+        if (project.name == "ar_flutter_plugin" && project.hasProperty('android')) {
+            project.android {
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_1_8
+                    targetCompatibility JavaVersion.VERSION_1_8
+                }
+
+                kotlinOptions {
+                    jvmTarget = "1.8"
+                }
+            }
+        }
+    }
+}
+subprojects {
     project.evaluationDependsOn(":app")
 }
 
