--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  ar_flutter_plugin: ^0.7.3
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/models/
+    - assets/models/trotting_cat.gltf
+    - assets/models/trotting_cat.glb
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
